--- a/index.css
+++ b/index.css
@@ -372,7 +372,7 @@ section{
 }
 
 .deals{
-  background:url(images/banner3.png) no-repeat;
+  background:url(banner3.png) no-repeat;
   background-position: center;
   background-size: cover;
   padding-top:7rem;
@@ -454,7 +454,7 @@ section{
 }
 
 .newsletter{
-  background:url(images/newsletter-bg.jpg) no-repeat;
+  background:url(newsletter-bg.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   text-align:center;
