--- a/index.css
+++ b/index.css
@@ -372,7 +372,7 @@ section{
 }
 
 .deals{
-  background:url(banner3) no-repeat;
+  background:url(banner3.png) no-repeat;
   background-position: center;
   background-size: cover;
   padding-top:7rem;
